--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="buzzik.png" />
           </div>
         <div class="flex-row">
-          <button type="button" class="btn btn-primary" id="login-btn">Login through GT</button>
+          <button type="button" class="btn btn-primary" id="login-btn" onclick="location.href = 'login.html'">Login through GT</button>
         </div>
       </div>
     </div>
