--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Buzzik | Home</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="favicon" href="buzzik.png" type="image/png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
@@ -14,7 +15,7 @@
           <h1>Buzzik!</h1>
         </div>
           <div class="flex-row">
-            <img src="buzzik.png" />
+            <img id="buzzik-logo" src="buzzik.png" />
           </div>
         <div class="flex-row">
           <button type="button" class="btn btn-primary" id="login-btn">Login through GT</button>
