--- a/login.html
+++ b/login.html
@@ -1,32 +1,49 @@
-<html>
-<head>
-<title>
-Login page
-</title>
-</head>
-<body>
-<h1 style="font-family:Arial;text-align="center";font-size:20pt;
-color:#00FF00;>
-Login
-</h1>
-<form name="login">
-Username<input type="text" name="userid"/>
-Password<input type="password" name="pswrd"/>
-<input type="button" onclick="check(this.form)" value="Login"/>
-<input type="reset" value="Cancel"/>
-</form>
-<script language="javascript">
-function check(form)
-{
- if((form.userid.value == "student@gatech.edu" && form.pswrd.value == "student") || (form.userid.value == "faculty@gatech.edu" && form.pswrd.value == "faculty"))
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Buzzik | Home</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="favicon" href="buzzik.png" type="image/png" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="d-flex login container justify-content-center align-middle">
+      <div class="d-flex flex-column align-items-center">
+        <div class="flex-row">
+          <h1>Buzzik!</h1>
+        </div>
+          <div class="flex-row">
+            <img id="buzzik-logo" src="buzzik.png" />
+          </div>
+        <div class="flex-row login-input">
+          <form>
+            <div class="form-group">
+              <label for="email">Username</label>
+              <input type="email" class="form-control" name="userid" id="email" placeholder="Enter your email address" />
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" name="pswrd" class="form-control" id="password" placeholder="Password"/>
+            </div>
+            <button type="submit" onclick="check(this.form)" value="Login" id="login-btn" class="btn btn-primary">Login</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script language="javascript">
+  function check(form)
   {
-    window.open('https://40swmg6fu2.execute-api.us-east-1.amazonaws.com/default/access-token')/*opens the target page while Id & password matches*/
+   if((form.userid.value == "student@gatech.edu" && form.pswrd.value == "student") || (form.userid.value == "faculty@gatech.edu" && form.pswrd.value == "faculty"))
+    {
+      window.open('https://40swmg6fu2.execute-api.us-east-1.amazonaws.com/default/access-token')/*opens the target page while Id & password matches*/
+    }
+   else
+   {
+     alert("Error Password or Username")/*displays error message*/
+    }
   }
- else
- {
-   alert("Error Password or Username")/*displays error message*/
-  }
-}
-</script>
-</body>
+  </script>
 </html>
