--- a/login.html
+++ b/login.html
@@ -39,6 +39,7 @@
    if((form.userid.value == "student@gatech.edu" && form.pswrd.value == "student") || (form.userid.value == "faculty@gatech.edu" && form.pswrd.value == "faculty"))
     {
       window.open('https://40swmg6fu2.execute-api.us-east-1.amazonaws.com/default/access-token')/*opens the target page while Id & password matches*/
+      window.open('homepage.html')
     }
    else
    {
