--- a/homepage.html
+++ b/homepage.html
@@ -186,9 +186,7 @@
 
         var dataset = [
           {
-            label: "line1",
             data: data1
-
           }
         ];
 
@@ -219,7 +217,7 @@
 
     </header>
 
-    <h1>Success!</h1>
+    <h1>Number of Songs Played per Date</h1>
 
     <div id="flot-placeholder"></div>
 
