Updated fields to current setup

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
   {
    if((form.userid.value == "student@gatech.edu" && form.pswrd.value == "student") || (form.userid.value == "faculty@gatech.edu" && form.pswrd.value == "faculty"))
     {
-      window.open('https://40swmg6fu2.execute-api.us-east-1.amazonaws.com/default/access-token')/*opens the target page while Id & password matches*/
+      window.open('https://buzzik-cooperpellaton.c9users.io:8080/')/*opens the target page while Id & password matches*/
       window.open('homepage.html')
     }
    else
