--- a/homepage.html
+++ b/homepage.html
@@ -13,11 +13,13 @@
         $.ajax({
             url:Url,
             type:"GET",
+            crossDomain: true,
+            dataType: "jsonp",
             success: function(result) {
                 console.log(result)
             },
             error:function(error){
-                console.log('Error ${error}')
+                console.log('Error ', error)
             }
         });
 
