--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <style type="text/css">
         #flot-placeholder{width:750px;height:300px;}
     </style>
-    <script type="text/javascript" src="jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="jquery.flot.js"></script>
     <script type="text/javascript" src="jquery.flot.time.js"></script>
     <script type="text/javascript">
