--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
   {
    if((form.userid.value == "student@gatech.edu" && form.pswrd.value == "student") || (form.userid.value == "faculty@gatech.edu" && form.pswrd.value == "faculty"))
     {
-      window.open('https://buzzik-cooperpellaton.c9users.io:8080/')/*opens the target page while Id & password matches*/
+      //window.open('https://buzzik-cooperpellaton.c9users.io:8080/')/*this should be changed to an AJAX GET call to the API which will respond with whether or not we are good to redirect to the homepage*/
       window.open('homepage.html')
     }
    else
