Date Selector Update
Now the inputs for date selection are just date selection.

--- a/homepage.html
+++ b/homepage.html
@@ -185,11 +185,13 @@
 						<table class="left-15">
 							<tr>
 								<th style="width: 20%;">From:</th>
-								<th><form><input type="text"></input></form></th>
+								<th><form><input type="date" class="date-selector" id="start"
+                                    min="2018-08-20" max="2018-12-16"/></form></th>
 							</tr>
 							<tr>
 								<td>To:</td>
-								<td><form><input type="text"></input></form></td>
+								<td><form><input type="date" class="date-selector" id="end"
+                                    min="2018-08-20" max="2018-12-16" /></form></td>
 							</tr>
 						</table>
 					</div>
