Basic (unfinished) Help Section
A basic help section. Unfinished!

--- a/homepage.html
+++ b/homepage.html
@@ -130,6 +130,16 @@
 			</div>
 		</div>
 	</section>
+	
+	<section>
+		<div id="help">
+			<div id="help-popup">
+				
+				<div id="title">BUZZIK HELP!</div>
+				
+			</div>
+		</div>
+	</section>
 
 </body>
 </html>
