--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
 					<div class="spacer-10"></div>
 					<div class="left-15">
 						<div id="graph-control-view-selector" class="btn-group">
-							<button id="select-day" class="btn btn-4" value="day" onclick='switchView("%d/%m/%Y", "select-day")'>
+							<button id="select-day" class="btn btn-4" value="day" onclick='switchView("%m/%d/%Y", "select-day")'>
 								Day
 							</button>
 							<!-- <button id="select-week" class="btn btn-4" value="week" onclick='switchView("%d/%m/%Y", "select-week")'>
