--- a/homepage.html
+++ b/homepage.html
@@ -135,28 +135,32 @@
 	<div id="helpModal" class="help-Modal">
 		<div class="help-Modal-Content">
 			<span id="closeBtn" class="close-btn">&times;</span>
-            <text id="help-header">Buzzik Help!</text><br>
-            <text><b><i>Anything you might need to know you'll be able to find here on the Buzzik help page!</i></b></text>
-			<button id='opt1'class="accordion"onclick='expandPanel("opt1");'>Refining Your Dataset</button>
-                <div class="panel">
-                    <p>help</p>
-                </div>
-            <button id='opt2'class="accordion"onclick='expandPanel("opt2");'>Toggling Dark Mode</button>
-                <div class="panel">
-                    <p>help</p>
-                </div>
-            <button id='opt3'class="accordion"onclick='expandPanel("opt3");'>Checking Your Account Info and Privileges</button>
-                <div class="panel">
-                    <p>help</p>
-                </div>
-            <button id='opt4'class="accordion"onclick='expandPanel("opt4");'>Uploading Calendars</button>
-                <div class="panel">
-                    <p>help</p>
-                </div>
-            <button id='opt5'class="accordion"onclick='expandPanel("opt5");'>Logging Out</button>
-                <div class="panel">
-                    <p>help</p>
-                </div>
+      <div style="padding-bottom: 1rem;">
+				<text id="help-header">Buzzik Help!</text><br>
+	      <text><b><i>Anything you might need to know you'll be able to find here on the Buzzik help page!</i></b></text>
+			</div>
+			<div class="help-ans">
+				<button id='opt1'class="accordion help-text"onclick='expandPanel("opt1");'>Refining Your Dataset</button>
+	      <div class="panel">
+	        <p>help</p>
+	      </div>
+	      <button id='opt2'class="accordion help-text"onclick='expandPanel("opt2");'>Toggling Dark Mode</button>
+	      <div class="panel">
+	          <p>help</p>
+	      </div>
+	      <button id='opt3'class="accordion help-text"onclick='expandPanel("opt3");'>Checking Your Account Info and Privileges</button>
+	      <div class="panel">
+	          <p>help</p>
+	      </div>
+	      <button id='opt4'class="accordion help-text"onclick='expandPanel("opt4");'>Uploading Calendars</button>
+	      <div class="panel">
+	          <p>help</p>
+	      </div>
+	      <button id='opt5'class="accordion help-text"onclick='expandPanel("opt5");'>Logging Out</button>
+	      <div class="panel">
+	          <p>help</p>
+	      </div>
+			</div>
 		</div>
 	</div>
 </body>
