Updated help modal

--- a/homepage.html
+++ b/homepage.html
@@ -138,28 +138,71 @@
 			<span id="closeBtn" class="close-btn">&times;</span>
       <div style="padding-bottom: 1rem;">
 				<text id="help-header">Buzzik Help!</text><br>
-	      <text><b><i>Anything you might need to know you'll be able to find here on the Buzzik help page!</i></b></text>
+	      <text style="margin-left:5px;"><b><i>Anything you might need to know you'll be able to find here on the Buzzik help page!</i></b></text>
 			</div>
 			<div class="help-ans">
 				<button id='opt1'class="accordion help-text"onclick='expandPanel("opt1");'>Refining Your Dataset</button>
 	      <div class="panel">
-	        <p>help</p>
+	        <ul class="help-list">
+						<li>Select how you want to view the data
+							<ul>
+								<li>Day</li>
+								<li>Month</li>
+								<li>Year</li>
+							</ul>
+						</li>
+						<li>
+							Select a date range
+						</li>
+						<li>
+							Select what kind of chart you want to view the data on
+							<ul>
+								<li>Bar chart</li>
+								<li>Pie chart</li>
+								<li>Line chart</li>
+							</ul>
+						</li>
+						<li>
+							Select how you want to filter the data
+							<ul>
+								<li>No filter</li>
+								<li>Artist</li>
+								<li>Song title</li>
+							</ul>
+						</li>
+					</ul>
 	      </div>
 	      <button id='opt2'class="accordion help-text"onclick='expandPanel("opt2");'>Toggling Dark Mode</button>
 	      <div class="panel">
-	          <p>help</p>
+	          <ul class="help-list">
+	          	<li>
+								Click the "Night" button on the lower right side of the screen
+							</li>
+	          </ul>
 	      </div>
 	      <button id='opt3'class="accordion help-text"onclick='expandPanel("opt3");'>Checking Your Account Info and Privileges</button>
 	      <div class="panel">
-	          <p>help</p>
+	          <ul class="help-list">
+							<li>
+								TBD
+							</li>
+						</ul>
 	      </div>
 	      <button id='opt4'class="accordion help-text"onclick='expandPanel("opt4");'>Uploading Calendars</button>
 	      <div class="panel">
-	          <p>help</p>
+					<ul class="help-list">
+						<li>
+							TBD
+						</li>
+					</ul>
 	      </div>
 	      <button id='opt5'class="accordion help-text"onclick='expandPanel("opt5");'>Logging Out</button>
 	      <div class="panel">
-	          <p>help</p>
+				   <ul class="help-list">
+						 <li>
+							Click the "Logout" button on the lower right side of the screen
+						 </li>
+					 </ul>
 	      </div>
 			</div>
 		</div>
