Artist Feature Removal
Commented out the artist refinement option for safety, will uncomment when backend supports.

--- a/homepage.html
+++ b/homepage.html
@@ -100,9 +100,9 @@
                         <button id="select-none" class="btn btn-5" value="noFilter" onclick='switchFilter("none", "select-none")'>
                                 No Filter
                         </button>
-                        <button id="select-artist" class="btn btn-5" value="artist" onclick='switchFilter("artist", "select-artist")'>
+                        <!-- <button id="select-artist" class="btn btn-5" value="artist" onclick='switchFilter("artist", "select-artist")'>
                                 Artist
-                        </button>
+                        </button> -->
                         <button id="select-title" class="btn btn-5" value="title" onclick='switchFilter("title", "select-title")'>
                                 Song Title
                         </button>
