Revert "changed upload"
This reverts commit 7662b7037a036905c5d8facecb6cf8c245e39232.

--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,6 @@
     <script type="text/javascript" src="buzzik.js">
             visualizeDataset();
     </script>
-    <script type="text/javascript" src="ical.js"></script>
 </head>
 <body>
 
@@ -128,14 +127,14 @@
 
 			<div id="options-container">
 				<button class="btn btn-6">Export</button>
-				<button class="btn btn-6" onclick="openImportCalendar();">Upload Calendar</button>
+				<button class="btn btn-6" onclick="openImportCalendarCsvFileDialog();">Upload Calendar</button>
 				<!-- <button class="btn btn-6">Upload</button> -->
 				<button class="btn btn-6">Night</button>
 				<button class="btn btn-6 red">Logout</button>
 			</div>
 			
 			<form enctype="multipart/form-data" action="/upload/calendar" method="post">
-				<input id="csv-ics-calendar-upload" type="file" accept=".csv,.ics" style="display:none;" />
+				<input id="csv-calendar-upload" type="file" accept=".csv" style="display:none;" />
 			</form>
 		</div>
 	</section>
