--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="content.css">
 
-    <script src="jquery-3.3.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery.csv.js"></script>
     <script type="text/javascript" src="jquery.flot.js"></script>
     <script type="text/javascript" src="jquery.flot.time.js"></script>
