--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="content.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="jquery.csv.js"></script>
     <script type="text/javascript" src="jquery.flot.js"></script>
     <script type="text/javascript" src="jquery.flot.time.js"></script>
@@ -133,7 +133,7 @@
 				<button class="btn btn-6">Night</button>
 				<button class="btn btn-6 red">Logout</button>
 			</div>
-			
+
 			<form enctype="multipart/form-data" action="/upload/calendar" method="post">
 				<input id="csv-ics-calendar-upload" type="file" accept=".csv,.ics" style="display:none;" />
 			</form>
